# nonebot-plugin-word-bank3

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_word_bank3/: README.md  __init__.py  config.py  data_source.py  models.py  parser.py  utils.py
nonebot_plugin_word_bank3/models/: typing_models.py  word_bank.py  word_bank_data.py
tests/: _test_word_bank3_chat.py  conftest.py  test_nonebot_plugin_word_bank3.py  test_word_bank3.py  test_word_bank3_chat.py
